# wfsai

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  test.env  test1_config.yaml
autoapi/summary/: index.html
autoapi/wfsai/: index.html
autoapi/wfsai/cli/: index.html
autoapi/wfsai/configuration/: index.html
autoapi/wfsai/data/: index.html
autoapi/wfsai/execution/: index.html
autoapi/wfsai/imagery/: index.html
autoapi/wfsai/setup_logging/: index.html
autoapi/wfsai/shapes/: index.html
development/: index.html
docs/: development.md  implementation.md  index.md  installation.md  tutorial.md
implementation/: index.html
installation/: index.html
search/: search_index.json
tutorial/: index.html
wfsai/: __init__.py  cli.py  config.py  configuration.py  data.py  execution.py  imagery.py  setup_logging.py  shapes.py
